Majorly revised how package installation is configured and applied. The BREAKS old aspects_php_packages dictionaries.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,10 @@ aspects_php_apache_installed: False
 # If you want to install the php command line tool, set aspects_php_cli_installed to True.
 aspects_php_cli_installed: False
 
+# Use this dictionary to list packages for installation.
+# See README.md for details.
+aspects_php_packages: {}
+
 # Since PECL can be ugly, we disable the PECL tasks by default.
 # Set aspects_php_use_pecl to True if you wish to use these tasks.
 aspects_php_use_pecl: False
@@ -13,6 +17,7 @@ aspects_php_use_pecl: False
 # To configure and enable modules that are taken care of by php5enmod and php5dismod tools, use
 # the aspects_php_modules dictionary.
 aspects_php_modules: {}
+
 
 # Different distributions place the appropriate php.ini files in different locations.
 # Thus, we have to tell Ansible which ini file to use.
@@ -81,371 +86,3 @@ aspects_php_pecl_packages:
     linecreated:
       Debian: "/usr/lib/php5/20121212/uploadprogress.so"
       RedHat: "/usr/lib64/php/modules/uploadprogress.so"
-
-# PHP Packages
-aspects_php_packages:
-  php5:
-    state: "present"
-    Debian: "php5"
-    RedHat: "php"
-    Ubuntu1604: "php"
-  phppear:
-    state: "default"
-    Debian: "php-pear"
-    RedHat: "php-pear"
-  phpapc:
-    state: "default"
-    Debian: "php-apc"
-    Ubuntu1604: "php-apc"
-    RedHat: "php-pecl-apc"
-  phpauth:
-    state: "default"
-    Debian: "php-auth"
-    Ubuntu1604: "php-auth"
-  phpauthhttp:
-    state: "default"
-    Debian: "php-auth-http"
-    Ubuntu1604: "php-auth-http"
-  phpauthsasl:
-    state: "default"
-    Debian: "php-auth-sasl"
-    Ubuntu1604: "php-auth-sasl"
-  phpbenchmark:
-    state: "default"
-    Debian: "php-benchmark"
-  phpcache:
-    state: "default"
-    Debian: "php-cache"
-    Ubuntu1604: "php-cache"
-  phpcachelite:
-    state: "default"
-    Debian: "php-cache-lite"
-    Ubuntu1604: "php-cache-lite"
-  phpcodesniffer:
-    state: "default"
-    Debian: "php-codesniffer"
-    Ubuntu1604: "php-codesniffer"
-  phpcompat:
-    state: "default"
-    Debian: "php-compat"
-    Ubuntu1604: "php-compat"
-  phpconfig:
-    state: "default"
-    Debian: "php-config"
-  phpconsoletable:
-    state: "default"
-    Debian: "php-console-table"
-    Ubuntu1604: "php-console-table"
-  phpconsolecommandline:
-    state: "default"
-    Ubuntu1604: "php-console-commandline"
-  phpcryptblowfish:
-    state: "default"
-    Debian: "php-crypt-blowfish"
-    Ubuntu1604: "php-crypt-blowfish"
-  phpcryptchap:
-    state: "default"
-    Ubuntu1604: "php-crypt-chap"
-  phpcryptcbc:
-    state: "default"
-    Debian: "php-crypt-cbc"
-    Ubuntu1604: "php-crypt-cbc"
-  phpcryptgpg:
-    state: "default"
-    Debian: "php-crypt-gpg"
-    Ubuntu1604: "php-crypt-gpg"
-  phpdate:
-    state: "default"
-    Debian: "php-date"
-    Ubuntu1604: "php-date"
-  phpdb:
-    state: "default"
-    Debian: "php-db"
-    Ubuntu1604: "php-db"
-  phpdoc:
-    state: "default"
-    Debian: "php-doc"
-    Ubuntu1604: "php-doc"
-  phpelisp:
-    state: "default"
-    Debian: "php-elisp"
-    Ubuntu1604: "php-elisp"
-  phpeventdispatcher:
-    state: "default"
-    Debian: "php-event-dispatcher"
-  phpfile:
-    state: "default"
-    Debian: "php-file"
-  phpfpdf:
-    state: "default"
-    Debian: "php-fpdf"
-    Ubuntu1604: "php-fpdf"
-  phpgeshi:
-    state: "default"
-    Debian: "php-geshi"
-    Ubuntu1604: "php-geshi"
-  phpgetid3:
-    state: "default"
-    Debian: "php-getid3"
-    Ubuntu1604: "php-getid3"
-  phpgettext:
-    state: "default"
-    Debian: "php-gettext"
-    Ubuntu1604: "php-gettext"
-  libapache2modphp5:
-    state: "default"
-    Debian: "libapache2-mod-php5"
-    Ubuntu1604: "libapache2-mod-php"
-  libapache2modphp5filter:
-    state: "default"
-    Debian: "libapache2-mod-php5filter"
-  libexpectphp5:
-    state: "default"
-    Debian: "libexpect-php5"
-  libgvphp5:
-    state: "default"
-    Debian: "libgv-php5"
-  libowphp5:
-    state: "default"
-    Debian: "libow-php5"
-  php5adodb:
-    state: "default"
-    Debian: "php5-adodb"
-    Ubuntu1604: "php-adodb"
-  php5authpam:
-    state: "default"
-    Debian: "php5-auth-pam"
-  php5cgi:
-    state: "default"
-    Debian: "php5-cgi"
-    Ubuntu1604: "php-cgi"
-  php5cli:
-    state: "default"
-    Debian: "php5-cli"
-    RedHat: "php-cli"
-    Ubuntu1604: "php-cli"
-  php5common:
-    state: "default"
-    Debian: "php5-common"
-    RedHat: "php-common"
-    Ubuntu1604: "php-common"
-  php5curl:
-    state: "default"
-    Debian: "php5-curl"
-    Ubuntu1604: "php-curl"
-  php5dbg:
-    state: "default"
-    Debian: "php5-dbg"
-  php5dev:
-    state: "default"
-    Debian: "php5-dev"
-    Ubuntu1604: "php-dev"
-  php5enchant:
-    state: "default"
-    Debian: "php5-enchant"
-    RedHat: "php-enchant"
-  php5exactimage:
-    state: "default"
-    Debian: "php5-exactimage"
-  php5ffmpeg:
-    state: "default"
-    Debian: "php5-ffmpeg"
-  php5fpm:
-    state: "default"
-    Debian: "php5-fpm"
-    RedHat: "php-fpm"
-  php5gd:
-    state: "default"
-    Debian: "php5-gd"
-    RedHat: "php-gd"
-    Ubuntu1604: "php-gd"
-  php5geoip:
-    state: "default"
-    Debian: "php5-geoip"
-    Ubuntu1604: "php5-geoip"
-  php5gmp:
-    state: "default"
-    Debian: "php5-gmp"
-  php5idn:
-    state: "default"
-    Debian: "php5-idn"
-  php5imagick:
-    state: "default"
-    Debian: "php5-imagick"
-    Ubuntu1604: "php-imagick"
-  php5imap:
-    state: "default"
-    Debian: "php5-imap"
-    RedHat: "php-imap"
-    Ubuntu1604: "php-imap"
-  php5interbase:
-    state: "default"
-    Debian: "php5-interbase"
-  php5intl:
-    state: "default"
-    Debian: "php5-intl"
-    RedHat: "php-intl"
-    Ubuntu1604: "php-intl"
-  php5json:
-    state: "default"
-    Debian: "php5-json"
-    Ubuntu1604: "php-json"
-  php5lasso:
-    state: "default"
-    Debian: "php5-lasso"
-  php5ldap:
-    state: "default"
-    Debian: "php5-ldap"
-    RedHat: "php-ldap"
-    Ubuntu1604: "php-ldap"
-  php5librdf:
-    state: "default"
-    Debian: "php5-librdf"
-  php5mapscript:
-    state: "default"
-    Debian: "php5-mapscript"
-  php5mcrypt:
-    state: "default"
-    Debian: "php5-mcrypt"
-    Ubuntu1604: "php-mcrypt"
-  php5memcache:
-    state: "default"
-    Debian: "php5-memcache"
-    Ubuntu1604: "php-memcache"
-    RedHat: "php-pecl-memcache"
-  php5memcached:
-    state: "default"
-    Debian: "php5-memcached"
-    Ubuntu1604: "php-memcached"
-  php5midgard2:
-    state: "default"
-    Debian: "php5-midgard2"
-  php5ming:
-    state: "default"
-    Debian: "php5-ming"
-  php5mysql:
-    state: "default"
-    Debian: "php5-mysql"
-    RedHat: "php-mysql"
-    Ubuntu1604: "php-mysql"
-  php5mysqlnd:
-    state: "default"
-    Debian: "php5-mysqlnd"
-  php5odbc:
-    state: "default"
-    Debian: "php5-odbc"
-    RedHat: "php-odbc"
-  php5pgsql:
-    state: "default"
-    Debian: "php5-pgsql"
-    RedHat: "php-pgsql"
-    Ubuntu1604: "php-pgsql"
-  php5ps:
-    state: "default"
-    Debian: "php5-ps"
-  php5pspell:
-    state: "default"
-    Debian: "php5-pspell"
-    RedHat: "php-pspell"
-    Ubuntu1604: "php-pspell"
-  php5radius:
-    state: "default"
-    Debian: "php5-radius"
-  php5recode:
-    state: "default"
-    Debian: "php5-recode"
-    RedHat: "php-recode"
-  php5remctl:
-    state: "default"
-    Debian: "php5-remctl"
-  php5rrd:
-    state: "default"
-    Debian: "php5-rrd"
-    RedHat: "rrdtool-php"
-  php5sasl:
-    state: "default"
-    Debian: "php5-sasl"
-  php5snmp:
-    state: "default"
-    Debian: "php5-snmp"
-    RedHat: "php-snmp"
-  php5sqlite:
-    state: "default"
-    Debian: "php5-sqlite"
-    Ubuntu1604: "php-sqlite3"
-  php5suhosin:
-    state: "default"
-    Debian: "php5-suhosin"
-  php5svn:
-    state: "default"
-    Debian: "php5-svn"
-  php5sybase:
-    state: "default"
-    Debian: "php5-sybase"
-  php5tidy:
-    state: "default"
-    Debian: "php5-tidy"
-    RedHat: "php-tidy"
-    Ubuntu1604: "php-tidy"
-  php5tokyotyrant:
-    state: "default"
-    Debian: "php5-tokyo-tyrant"
-# php5-uuid is not available in Ubuntu 14.04.
-  php5uuid:
-    state: "default"
-    Debian: "php5-uuid"
-    Ubuntu1604: "php-uuid"
-    RedHat: "uuid-php"
-  php5xcache:
-    state: "default"
-    Debian: "php5-xcache"
-  php5xdebug:
-    state: "default"
-    Debian: "php5-xdebug"
-  php5xmlrpc:
-    state: "default"
-    Debian: "php5-xmlrpc"
-    RedHat: "php-xmlrpc"
-  php5xsl:
-    state: "default"
-    Debian: "php5-xsl"
-  phpbcmath:
-    state: "default"
-    RedHat: "php-bcmath"
-  phpdba:
-    state: "default"
-    RedHat: "php-dba"
-  phpdevel:
-    state: "default"
-    RedHat: "php-devel"
-  phpembedded:
-    state: "default"
-    RedHat: "php-embedded"
-  phpmbstring:
-    state: "default"
-    RedHat: "php-mbstring"
-    Ubuntu1604: "php-mbstring"
-  phppdo:
-    state: "default"
-    RedHat: "php-pdo"
-  phpprocess:
-    state: "default"
-    RedHat: "php-process"
-  phpsoap:
-    state: "default"
-    RedHat: "php-soap"
-  phpxml:
-    state: "default"
-    RedHat: "php-xml"
-  phpzts:
-    state: "default"
-    RedHat: "php-zts"
-  phppeclapcdevel:
-    state: "default"
-    RedHat: "php-pecl-apc-devel"
-  libpcre3dev:
-    state: "default"
-    Debian: "libpcre3-dev"
-    RedHat: "pcre-devel"
-
-
