--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -1,10 +1,10 @@
 ---
 # file: roles/php/tasks/main.yml
 - name: "install php packages"
-  include: installPackages.yml
-  when: ansible_os_family == "Debian"
+  include: "{{ ansible_pkg_mgr}}InstallPackages.yml"
   tags:
-      - aspects_php
+    - aspects_php
+    - aspects_php_package_install
 
 - include: pecl.yml
   when: aspects_php_use_pecl
