--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -12,255 +12,19 @@
     - aspects_php
     - aspects_php_pecl
 
+- name: "Set ini file configuration"
+  include: iniSetConfiguration.yml
+  tags:
+    - aspects_php
+    - aspects_php_config
+
+- name: "Remove ini file configuration"
+  include: iniRemoveConfiguration.yml
+  tags:
+    - aspects_php
+    - aspects_php_config
+
 - include: TrustyModManagement.yml
   when: (ansible_os_family == "Debian" and (ansible_lsb.release == "14.04" or ansible_lsb.major_release == "7"))  or ansible_os_family == "Linuxmint"
   tags:
       - aspects_php
-
-- name: Debian - set php.ini options for Apache
-  when:
-    ansible_distribution_version != "16.04" and
-    aspects_php_apache_installed == True and
-    aspects_php_config is defined and
-    (ansible_os_family == "Debian"  or ansible_os_family == "Linuxmint") and
-    item.value.enable == True and
-    item.value.target.Debian.apache is defined
-  ini_file:
-    state: "present"
-    dest: "{{ item.value.target.Debian.apache }}"
-    option: "{{ item.value.name }}"
-    value: "{{ item.value.value }}"
-    section: "{{ item.value.section }}"
-    owner: 0
-    group: 0
-    mode: "600"
-  with_dict: "{{ aspects_php_config }}"
-  notify: restart apache2
-  tags:
-    - aspects_php
-
-- name: Debian - set php.ini options for php-cli
-  when:
-    ansible_distribution_version != "16.04" and
-    aspects_php_cli_installed == True and
-    aspects_php_config is defined and
-    (ansible_os_family == "Debian" or ansible_os_family == "Linuxmint") and
-    item.value.enable == True and
-    item.value.target.Debian.cli is defined
-  ini_file:
-    state: "present"
-    dest: "{{ item.value.target.Debian.cli }}"
-    option: "{{ item.value.name }}"
-    value: "{{ item.value.value }}"
-    section: "{{ item.value.section }}"
-    owner: 0
-    group: 0
-    mode: "600"
-  with_dict: "{{ aspects_php_config }}"
-  tags:
-    - aspects_php
-
-- name: RedHat - set php.ini options for Apache
-  when:
-    aspects_php_apache_installed == True and
-    aspects_php_config is defined and
-    ansible_os_family == "RedHat" and
-    item.value.enable == True and
-    item.value.target.RedHat.apache is defined
-  ini_file:
-    state: "present"
-    dest: "{{ item.value.target.RedHat.apache }}"
-    option: "{{ item.value.name }}"
-    value: "{{ item.value.value }}"
-    section: "{{ item.value.section }}"
-    owner: 0
-    group: 0
-    mode: "600"
-  with_dict: "{{ aspects_php_config }}"
-  notify: restart httpd
-  tags:
-    - aspects_php
-
-- name: RedHat - set php.ini options for php-cli
-  when:
-    aspects_php_cli_installed == True and
-    aspects_php_config is defined and
-    ansible_os_family == "RedHat" and
-    item.value.enable == True and
-    item.value.target.RedHat.cli is defined
-  ini_file:
-    state: "present"
-    dest: "{{ item.value.target.RedHat.cli }}"
-    option: "{{ item.value.name }}"
-    value: "{{ item.value.value }}"
-    section: "{{ item.value.section }}"
-    owner: 0
-    group: 0
-    mode: "600"
-  with_dict: "{{ aspects_php_config }}"
-  tags:
-    - aspects_php
-
-- name: Ubuntu 16.04 - set php.ini options for Apache
-  when:
-    aspects_php_apache_installed == True and
-    aspects_php_config is defined and
-    (ansible_distribution == "Ubuntu" and
-     ansible_distribution_version == "16.04") and
-    item.value.enable == True and
-    item.value.target.Ubuntu1604.apache is defined
-  ini_file:
-    state: "present"
-    dest: "{{ item.value.target.Ubuntu1604.apache }}"
-    option: "{{ item.value.name }}"
-    value: "{{ item.value.value }}"
-    section: "{{ item.value.section }}"
-    owner: 0
-    group: 0
-    mode: "600"
-  with_dict: "{{ aspects_php_config }}"
-  notify: restart apache2
-  tags:
-    - aspects_php
-
-- name: Ubuntu 16.04 - set php.ini options for php-cli
-  when:
-    aspects_php_cli_installed == True and
-    aspects_php_config is defined and
-    (ansible_distribution == "Ubuntu" and
-     ansible_distribution_version == "16.04") and
-    item.value.enable == True and
-    item.value.target.Ubuntu1604.cli is defined
-  ini_file:
-    state: "present"
-    dest: "{{ item.value.target.Ubuntu1604.cli }}"
-    option: "{{ item.value.name }}"
-    value: "{{ item.value.value }}"
-    section: "{{ item.value.section }}"
-    owner: 0
-    group: 0
-    mode: "600"
-  with_dict: "{{ aspects_php_config }}"
-  tags:
-    - aspects_php
-
-- name: Debian - remove php.ini options for Apache
-  when:
-    ansible_distribution_version != "16.04" and
-    aspects_php_apache_installed == True and
-    aspects_php_config is defined and
-    (ansible_os_family == "Debian" or ansible_os_family == "Linuxmint") and
-    item.value.enable == False and
-    item.value.target.Debian.apache is defined
-  ini_file:
-    state: "absent"
-    dest: "{{ item.value.target.Debian.apache }}"
-    option: "{{ item.value.name }}"
-    section: "{{ item.value.section }}"
-    owner: 0
-    group: 0
-    mode: "600"
-  with_dict: "{{ aspects_php_config }}"
-  notify: restart apache2
-  tags:
-    - aspects_php
-
-- name: Debian - remove php.ini options for php-cli
-  when:
-    ansible_distribution_version != "16.04" and
-    aspects_php_cli_installed == True and
-    aspects_php_config is defined and
-    (ansible_os_family == "Debian" or ansible_os_family == "Linuxmint") and
-    item.value.enable == False and
-    item.value.target.Debian.cli is defined
-  ini_file:
-    state: "absent"
-    dest: "{{ item.value.target.Debian.cli }}"
-    option: "{{ item.value.name }}"
-    section: "{{ item.value.section }}"
-    owner: 0
-    group: 0
-    mode: "600"
-  with_dict: "{{ aspects_php_config }}"
-  tags:
-    - aspects_php
-
-- name: Ubuntu 16.04 - remove php.ini options for Apache
-  when:
-    aspects_php_apache_installed == True and
-    aspects_php_config is defined and
-    (ansible_distribution == "Ubuntu" and
-     ansible_distribution_version == "16.04") and
-    item.value.enable == False and
-    item.value.target.Ubuntu1604.apache is defined
-  ini_file:
-    state: "absent"
-    dest: "{{ item.value.target.Ubuntu1604.apache }}"
-    option: "{{ item.value.name }}"
-    section: "{{ item.value.section }}"
-    owner: 0
-    group: 0
-    mode: "600"
-  with_dict: "{{ aspects_php_config }}"
-  notify: restart apache2
-  tags:
-    - aspects_php
-
-- name: Ubuntu 16.04 - remove php.ini options for php-cli
-  when:
-    aspects_php_cli_installed == True and
-    aspects_php_config is defined and
-    (ansible_distribution == "Ubuntu" and
-     ansible_distribution_version == "16.04") and
-    item.value.enable == False and
-    item.value.target.Ubuntu1604.cli is defined
-  ini_file:
-    state: "absent"
-    dest: "{{ item.value.target.Ubuntu1604.cli }}"
-    option: "{{ item.value.name }}"
-    section: "{{ item.value.section }}"
-    owner: 0
-    group: 0
-    mode: "600"
-  with_dict: "{{ aspects_php_config }}"
-  tags:
-    - aspects_php
-- name: RedHat - remove php.ini options for Apache
-  when:
-    aspects_php_apache_installed == True and
-    aspects_php_config is defined and
-    ansible_os_family == "RedHat" and
-    item.value.enable == False and
-    item.value.target.RedHat.apache is defined
-  ini_file:
-    state: "absent"
-    dest: "{{ item.value.target.RedHat.apache }}"
-    option: "{{ item.value.name }}"
-    section: "{{ item.value.section }}"
-    owner: 0
-    group: 0
-    mode: "600"
-  with_dict: "{{ aspects_php_config }}"
-  notify: restart httpd
-  tags:
-    - aspects_php
-
-- name: RedHat - remove php.ini options for php-cli
-  when:
-    aspects_php_cli_installed == True and
-    aspects_php_config is defined and
-    ansible_os_family == "RedHat" and
-    item.value.enable == False and
-    item.value.target.RedHat.cli is defined
-  ini_file:
-    state: "absent"
-    dest: "{{ item.value.target.RedHat.cli }}"
-    option: "{{ item.value.name }}"
-    section: "{{ item.value.section }}"
-    owner: 0
-    group: 0
-    mode: "600"
-  with_dict: "{{ aspects_php_config }}"
-  tags:
-    - aspects_php
-
