Added task files that remove packages. Added task file that can clean up OS installed config files that you don't want messing with your custom settings.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -28,6 +28,7 @@ aspects_php_custom_config_directory:
     7: "/etc/php.d"
 
 aspects_php_config: {}
+aspects_php_remove_package_managed_ini_files: {}
 
 # PECL Packages:
 # Find names at: http://pecl.php.net/packages.php
