--- a/tasks/aptInstallPackages.yml
+++ b/tasks/aptInstallPackages.yml
@@ -32,7 +32,7 @@
   when:
     - aspects_php_apache_installed
     - ansible_distribution == "Ubuntu"
-    - ansible_distribution_version == 14.04
+    - ansible_distribution_version == "14.04"
   apt:
     pkg: "libapache2-mod-php5"
     state: "present"
@@ -42,11 +42,11 @@
     - aspects_php_package_install
     - aspects_php_package_install_apt
 
-- name: apt - Install libapache2-mod-php on Ubuntu == 16.04
+- name: apt - Install libapache2-mod-php on Ubuntu 16.04
   when:
     - aspects_php_apache_installed
     - ansible_distribution == "Ubuntu"
-    - ansible_distribution_version == 16.04
+    - ansible_distribution_version == "16.04"
   apt:
     pkg: "libapache2-mod-php"
     state: "present"
@@ -56,11 +56,11 @@
     - aspects_php_package_install
     - aspects_php_package_install_apt
 
-- name: apt - Install libapache2-mod-php on Debian == 9
+- name: apt - Install libapache2-mod-php on Debian 9
   when:
     - aspects_php_apache_installed
     - ansible_distribution == "Debian"
-    - ansible_distribution_major_version == 9
+    - ansible_distribution_major_version == "9"
   apt:
     pkg: "libapache2-mod-php"
     state: "present"
