--- a/meta/main.yml
+++ b/meta/main.yml
@@ -23,4 +23,4 @@ galaxy_info:
   categories:
   - web
 dependencies:
-- { role: aspects_packages, when: aspects_packages_enabled }
+- { role: aspects_packages, when: aspects_packages_enabled and aspects_php_enabled }
